fixed some linking issues in lecture 6

--- a/guides/lecture6.html
+++ b/guides/lecture6.html
@@ -328,6 +328,7 @@ for(var i = 0; i&#60;ampSplit.length; i++) {
   var e = eqSplit[i];
   formDataObj[e[0]] = e[1];
 }</pre>
+            <p>Just to be sure, let's have the same click handler log this object to the console so we can see what we get.</p>
           </div>
         </div>
       </section>
