Completed the change to new framework

--- a/guides/lecture1.html
+++ b/guides/lecture1.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/style/style.css">
     <script src="/js/coder.js"></script>
   </head>
-  <body data-spy='scroll' data-target='#nav-container'>
+  <body data-spy='scroll' data-target='#nav-container' data-offset="70">
     <project-header tag="Let's make a webpage!" author='Aaron Niskin'></project-header>
     <project-intro>
       <p>In this project we will be making a HelloWorld style webpage. Our goal is to familiarize ourselves with the basics of HTML and the basics of the HTML evaluation model.</p>
