--- a/index.html
+++ b/index.html
@@ -200,6 +200,30 @@
         </div>
       </div>
     </section>
+    <section class='section'>
+      <div class='row'>
+        <div class='col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3'>
+          <div class='well project' id='lecture7'>
+            <img src='/img/l7-banner.png' class='img-responsive'>
+            <div class='description faded'>
+              <h2>Make pretty functional.</h2>
+              <div class='row'>
+                <div class='col-xs-12 col-sm-4 col-sm-offset-1'>
+                  <button class='btn btn-default try'>
+                    Try it out
+                  </button>
+                </div>
+                <div class='col-xs-12 col-sm-4 col-sm-offset-2'>
+                  <button class='btn btn-default do'>
+                    Do it yourself
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 	</body>
 </html>
 
