adding content to lecture 7

--- a/guides/lecture7.html
+++ b/guides/lecture7.html
@@ -78,9 +78,10 @@ response.end();</pre>
       <pre>http.createServer(function(request, response) {
   ...
 }).listen(port-number);</pre>
-    </project-step>
-    <project-step title="Check it out!" last="true">
       <p>Go ahead and submit your form and see what happens. Make sure the form action is not being impeeded by any JavaScript running on the page (e.g. any click handlers, etc).</p>
+    </project-step>
+    <project-step title="Let's give something back">
+      <p>Let's make our code a little bit more dynamic. Rather than just sending back the same thing to everybody, let's send something unique back to every person. Just for starters, let's send back the query string that the client sent us. In other words, our page should look a little bit like,</p>
     </project-step>
   </body>
 </html>
